--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.organization=3r1co-github
-sonar.projectKey=3r1co_cd2020
+sonar.organization=
+sonar.projectKey=
 sonar.language=js
 sonar.inclusions=**/*.js
