--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.organization=
-sonar.projectKey=
+sonar.organization= kilma98
+sonar.projectKey= kilma98_cd2020
 sonar.language=js
 sonar.inclusions=**/*.js
